--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="canonical" href="AAAAAAAAAAAAAAAAAAAAAAA">
+    <link rel="canonical" href="https://ezmp3.github.io/tools/">
     <title>Free YouTube Video Downloader tools</title>
     <meta name="description" content="Download YouTube videos free with the best YouTube video downloader tools. Save videos in HD, MP4, and MP3 formats quickly and securely online.">
     <meta name="keywords" content="Best YouTube Downloader, YouTube Video Downloader, YouTube Video Converter, X2Mate">
     <meta name="robots" content="index, follow">
-    <link rel="icon" type="image/png" href="Logooooo">
+    <link rel="icon" type="image/png" href="https://ezmp3.github.io/tools/favicon.png">
     <meta property="og:title" content="Free YouTube Video Downloader tools">
     <meta property="og:description" content="Download YouTube videos free with the best YouTube video downloader tools. Save videos in HD, MP4, and MP3 formats quickly and securely online.">
-    <meta property="og:url" content="AAAAAAAAAAAAA">
+    <meta property="og:url" content="https://ezmp3.github.io/tools/">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="bbbbbbbbbbbbbb">
+    <meta property="og:image" content="https://ezmp3.github.io/tools/youtube-downloader.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Free YouTube Video Downloader tools">
     <meta name="twitter:description" content="Download YouTube videos free with the best YouTube video downloader tools. Save videos in HD, MP4, and MP3 formats quickly and securely online.">
-    <meta name="twitter:image" content="bbbbbbbbbbbbbb">
+    <meta name="twitter:image" content="https://ezmp3.github.io/tools/youtube-downloader.png">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet"/>
 
     <style>
@@ -279,3 +279,4 @@
 
 </body>
 </html>
+
