--- a/index.html
+++ b/index.html
@@ -274,9 +274,10 @@
 </div>
 
 <footer>
-    © 2025 Free YouTube Downloader Tools
+    © 2025 <a href="https://ezmp3.github.io/tools/">Free YouTube Downloader Tools</a>
 </footer>
 
 </body>
 </html>
+
 
