--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
     <!-- BACKLINK SECTION 1 -->
     <div class="section">
-        <h2>General High Authority Backlinks</h2>
+        <h2>X2Mate - reference links</h2>
 
         <div class="box">
             <ul>
@@ -279,5 +279,6 @@
 
 </body>
 </html>
+
 
 
