--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
     <!-- BACKLINK SECTION 1 -->
     <div class="section">
-        <h2>X2Mate - reference links</h2>
+        <h2>X2Mate - Reference links</h2>
 
         <div class="box">
             <ul>
@@ -198,7 +198,7 @@
 
     <!-- BACKLINK SECTION 2 -->
     <div class="section">
-        <h2>Social Profile Backlinks</h2>
+        <h2>X2Mate - Reference Social Profile Backlinks</h2>
 
         <div class="box">
             <ul>
@@ -279,6 +279,7 @@
 
 </body>
 </html>
+
 
 
 
